--- a/package.json
+++ b/package.json
@@ -2,62 +2,37 @@
   "name": "murmansk_web_interface",
   "version": "0.0.0",
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-syntax-decorators": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "coffee-loader": "^0.7.2",
-    "coffee-script": "^1.10.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.2.2",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-react": "^6.0.0",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "file-loader": "^0.8.5",
-    "handlebars": "^4.0.5",
-    "handlebars-loader": "^1.0",
-    "json-loader": "^0.5.4",
-    "less": "^2.7.0",
-    "less-loader": "^2.2.2",
-    "po2json": "^0.4.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.0"
+    "babel-cli": "^6.11.4",
+    "babel-core": ">=5.6.18",
+    "babel-eslint": ">=6.1.2",
+    "babel-loader": ">=5.1.4",
+    "babel-plugin-react-transform": ">=1.1.0",
+    "babel-preset-es2015": ">=6.3.13",
+    "babel-preset-react": ">=6.3.13",
+    "babel-preset-stage-0": ">=6.3.13",
+    "body-parser": "^1.15.2",
+    "cookie-session": "^2.0.0-alpha.1",
+    "css-loader": ">=0.23.1",
+    "eslint": ">=3.2.2",
+    "eslint-plugin-babel": ">=3.3.0",
+    "eslint-plugin-react": ">=6.0.0",
+    "express": ">=4.13.3",
+    "extract-text-webpack-plugin": ">=1.0.1",
+    "file-loader": ">=0.8.5",
+    "style-loader": ">=0.13.1",
+    "url-loader": ">=0.5.7",
+    "webpack": ">=1.9.11",
+    "webpack-dev-middleware": ">=1.2.0",
+    "webpack-hot-middleware": ">=2.2.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
-    "backbone.marionette": "^2.4.5",
-    "bootbox": "^4.4.0",
-    "bootstrap": "^3.3.6",
-    "d3": "^3.5.12",
-    "flot": "^0.8.0-alpha",
-    "font-awesome": "^4.5.0",
-    "ion-rangeslider": "^2.1.4",
-    "ip": "^1.1.0",
-    "jed": "^0.5.4",
-    "jquery": "^2.1.4",
-    "jquery-validation": "^1.14.0",
-    "jquery.cookie": "^1.4.1",
-    "less": "^2.7.0",
-    "md5": "^2.0.0",
-    "moment": "^2.10.6",
-    "nvd3": "^1.8.1",
-    "react": "^15.2.1",
-    "react-addons-shallow-compare": "^15.2.1",
-    "react-classnames": "^0.1.2",
-    "react-dom": "^15.0.2",
-    "react-nvd3": "^0.5.7",
-    "react-redux": "^4.0.6",
-    "react-select": "^1.0.0-beta11",
-    "react-virtualized": "^7.12.2",
-    "recharts": "^0.13.2",
-    "redux": "^3.0.5",
-    "redux-thunk": "^1.0.3",
-    "rivets": "^0.8.1",
-    "roboto-fontface": "^0.4.2",
-    "trumbowyg": "^2.1.0",
-    "underscore": "^1.8.3"
+    "font-awesome": ">=4.5.0",
+    "purecss": ">=0.6.0",
+    "react": ">=15.2.1",
+    "react-dom": ">=15.0.2",
+    "react-redux": ">=4.0.6",
+    "react-router": "^2.6.1",
+    "redux": ">=3.0.5",
+    "redux-thunk": ">=1.0.3"
   }
 }
