--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,10 @@
   "parser": "babel-eslint",
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true,
+    "mocha": true,
+    "jest": true
   },
   "plugins": [
     "react",
