--- a/package.json
+++ b/package.json
@@ -5,20 +5,27 @@
     "babel-cli": "^6.11.4",
     "babel-core": ">=5.6.18",
     "babel-eslint": ">=6.1.2",
+    "babel-jest": "^14.1.0",
     "babel-loader": ">=5.1.4",
     "babel-plugin-react-transform": ">=1.1.0",
     "babel-preset-es2015": ">=6.3.13",
     "babel-preset-react": ">=6.3.13",
     "babel-preset-stage-0": ">=6.3.13",
+    "babel-register": "^6.11.6",
     "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
     "cookie-session": "^2.0.0-alpha.1",
     "css-loader": ">=0.23.1",
     "eslint": ">=3.2.2",
     "eslint-plugin-babel": ">=3.3.0",
     "eslint-plugin-react": ">=6.0.0",
+    "expect.js": "^0.3.1",
     "express": ">=4.13.3",
     "extract-text-webpack-plugin": ">=1.0.1",
     "file-loader": ">=0.8.5",
+    "jest-cli": "^14.1.0",
+    "mocha": "^3.0.2",
+    "should": "^11.1.0",
     "style-loader": ">=0.13.1",
     "url-loader": ">=0.5.7",
     "webpack": ">=1.9.11",
